test : [api] 예약 등록 통합테스트